Added user key requirement
